fixed visible padding for headings on homepage

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -28,6 +28,7 @@
   h2 {
     font-family: $font-family-sans-serif;
     font-size: 14px;
+    line-height: 40px;
     text-transform: uppercase;
   }
 
@@ -182,7 +183,7 @@
   background: #FFEFB3;
   font-size: 12px;
   margin-top: 30px;
-  padding: 0 0 15px;
+  padding: 15px 0;
   width: 100%;
 
   a:hover {
